--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".signup"></activity>
+        <activity android:name=".forgotpassword2"></activity>
+        <activity android:name=".forgotpassword" />
+        <activity android:name=".signup" />
         <activity android:name=".act2" />
         <activity android:name=".MainActivity">
             <intent-filter>
