Added the main feed and navigation to other views

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.madforumapp">
 
-
     <supports-screens
-        android:smallScreens="true"
-        android:normalScreens="true"
         android:largeScreens="true"
-        />
+        android:normalScreens="true"
+        android:smallScreens="true" />
 
     <application
         android:allowBackup="true"
@@ -16,15 +14,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".forgotpassword2"></activity>
+        <activity android:name=".MainFeed"></activity>
+        <activity android:name=".forgotpassword2" />
         <activity android:name=".forgotpassword" />
         <activity android:name=".signup" />
         <activity android:name=".act2" />
-        <activity android:name=".ContactUs"/>
-        <activity android:name=".ContactUs2"/>
+        <activity android:name=".ContactUs" />
+        <activity android:name=".ContactUs2" />
         <activity android:name=".MainActivity">
-
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
