--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".forgotpassword2"></activity>
+        <activity android:name=".personalprofile"></activity>
+        <activity android:name=".forgotpassword2" />
         <activity android:name=".forgotpassword" />
         <activity android:name=".signup" />
         <activity android:name=".act2" />
