--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-       <!-- <activity
+        <activity android:name=".Edit_Reply"></activity>
+        <!--
+         <activity
             android:name=".UserActivitydashbord"
             android:label="@string/title_activity_user_activitydashbord"
-            android:theme="@style/AppTheme.NoActionBar"></activity>-->
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        -->
         <activity android:name=".ReplyDashbord" />
-       <!-- <activity
+        <!--
+ <activity
             android:name=".showReply"
             android:label="@string/title_activity_show_reply"
-            android:theme="@style/AppTheme.NoActionBar" />-->
+            android:theme="@style/AppTheme.NoActionBar" />
+        -->
         <activity android:name=".MainFeed" />
         <activity android:name=".UserActivitydashbord" />
         <activity android:name=".showReply" />
