--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.google.android.material:material:1.0.0'
+//
+//    implementation 'com.google.firebase:firebase-auth:18.0.0'
+//    implementation 'com.google.android.gms:play-services-gcm:17.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
